[package]
name = "lunamodel-transformv2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lunamodel-core = { workspace = true }
lunamodel-types = { workspace = true }
lunamodel-error = { workspace = true }
lunamodel-transpiler = { workspace = true }
lunamodel-serializer = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }
global_counter = { workspace = true }
