[package]
name = "lunamodel-translate"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lunamodel-core = { workspace = true }
lunamodel-error = { workspace = true }
lunamodel-types = { workspace = true }
lunamodel-io = { workspace = true, features = ["py"] }

strum_macros = { workspace = true }
hashbrown = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }

[dependencies.pyo3]
workspace = true
optional = true

[features]
py = ["pyo3"]
