[package]
name = "lunamodel-translate"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lunamodel-core = { workspace = true }
lunamodel-error = { workspace = true }
lunamodel-types = { workspace = true }
lunamodel-io = { workspace = true, features = ["py"] }
lunamodel-utils = { workspace = true }

strum_macros = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
