[package]
name = "lunamodel-transpiler"
version.workspace = true
license.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lunamodel-core = { workspace = true }
lunamodel-types = { workspace = true }
lunamodel-transpiler-macros = { workspace = true }
lunamodel-error = { workspace = true }
