[package]
name = "lunamodel-unwind"
version.workspace = true
license.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
lunamodel-unwindable = { workspace = true }
lunamodel-unwinder = { workspace = true }
