[package]
name = "lunamodel-utils"
version.workspace = true
license.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lunamodel-error = { workspace = true }

num = { workspace = true }
