[package]
name = "pylm"
version = "0.6.1-dev.1912+98cfdf66"
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
lunamodel-python = { workspace = true }
