[package]
name = "pylm"
version.workspace = true
license.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
lunamodel-python = { workspace = true }
