[package]
name = "pylm"
version.workspace = true
license.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
pyo3 = { workspace = true }
lunamodel-python = { workspace = true }

[features]
extension-module = ["pyo3/extension-module"]
